# nt-reversal-research

./: .gitignore  README.md  pyproject.toml
research/: data.py  notebook.ipynb  notebook.py
research/clients/: __init__.py  bear_lake.py  clickhouse.py
