[project]
name = "nt-reversal-research"
version = "0.1.0"
description = "Add your description here"
readme = "README.md"
requires-python = ">=3.13"
dependencies = [
    "altair>=6.0.0",
    "clickhouse-connect>=0.10.0",
    "ipykernel>=7.1.0",
    "marimo>=0.18.4",
    "numpy>=2.4.0",
    "polars>=1.36.1",
    "pyarrow>=22.0.0",
    "python-dotenv>=1.2.1",
    "pyzmq>=27.1.0",
    "statsmodels>=0.14.6",
    "vegafusion>=2.0.3",
    "vl-convert-python>=1.9.0",
]
